CHORE(Pages Amplitude)Insert

--- a/src/app/landing-page-membership/landing-page-membership.component.html
+++ b/src/app/landing-page-membership/landing-page-membership.component.html
@@ -228,8 +228,8 @@
   <section class="engage-session">
     <div class="col-6 adapt-height">
       <h1 class="italic align-left white-header">
-        Somos mais de <strong>40.000 membros</strong> <br> ao redor de mais de <strong>120 países</strong>! <br>
-        Junte-se ao nosso time! <br>
+        Somos mais de <strong>40.000 membros</strong> ao redor de mais de <strong>120 países</strong>! Junte-se ao nosso
+        time! <br>
         <button (click)="goToInscreva()" type="button" class="btn btn-primary" (click)="scrollTo(formMembershipRef)">
           Inscreva-se
         </button>
