--- a/src/app/landing-page-membership/landing-page-membership.component.scss
+++ b/src/app/landing-page-membership/landing-page-membership.component.scss
@@ -7,7 +7,7 @@ body,
 main {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;    
+    overflow-x: visible;    
     @at-root :host-context(.no-webp) #{&} {
         background-image: url('/assets/images/pattern1.png');
     }
@@ -419,7 +419,7 @@ font-size: 20px;
 .job-description-session,
 .engage-session {
     font-size: 18px;
-    min-height: 85vh !important;
+    height: 400px;
     padding: 30px 7.5% 0px 7.5%;
     display: flex;
     align-items: center;
@@ -515,11 +515,6 @@ font-size: 20px;
 }
 
 .job-description-session {
-    min-height: 60vh !important;
-}
-
-.engage-session {
-    height: 30vh !important;
     min-height: 60vh !important;
 }
 
@@ -1181,9 +1176,60 @@ drag-scroll {
         }
     }
 
+    .centered{
+        font-size: 22px
+    }
+
+    .engage-session h1{
+        font-size: 50px
+    }
+
+    .job-description-session {
+        padding: 50px 100px 50px 100px
+    }
+
+    .job-description-info {
+        padding-top: 50px
+    }
+
+    .adapt-height{
+        margin: 120px 0px 120px 50px;
+    }
+
+    .adapt-height h1{
+        font-size: 60px
+    }
+
+    .mobile-col p{
+        font-size: 28px !important
+    }
+
+    .col-width {
+        flex: 0 0 15% !important;
+    }
+
+    .carousel-wrapper p{
+        font-size: 22px
+    }
+
+    .padding-top-and-bottom {
+        padding: 0 0 20px
+    }
+
+    .btn-primary,
+    .btn-secondary {
+        font-size: 22px !important;
+        font-weight: bold;
+        width: 200px !important;
+        height: 60px !important;
+        line-height: 1em;
+        border-width: 2px;
+    }
+
     .container {
         max-width: 85%;
     }
+
     .experiences-session, .job-description-session, .engage-session {
         .container {
             max-width: 1240px
@@ -1259,8 +1305,7 @@ drag-scroll {
         }
     }
     .engage-session {
-        height: 30vh !important;
-        min-height: 50vh !important;
+        height: 100%
     }
 }
 
@@ -1269,7 +1314,6 @@ drag-scroll {
         height: auto;
     }
 }
-
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~animate.css/animate.min.css';
@@ -1309,7 +1353,7 @@ select:-webkit-autofill:focus {
         padding: 75px 0 !important
     }
 
-    .engage-session .adapt-height {
+    .adapt-height {
         height: 70.0vh !important;
     }
 
@@ -1645,7 +1689,6 @@ select:-webkit-autofill:focus {
         text-align: center;
         width: 100%;
         font-size: 22px;
-        // color: #fff;
         margin-top: 20px;
     }
 
@@ -1837,7 +1880,6 @@ label.input-terms-label {
     width: 100%;
     height: 50px;
     font-size: 1rem;
-    line-height: 1.5;
     background-clip: padding-box;
     border-top: none;
     border-left: none;
@@ -2738,10 +2780,6 @@ section.host-details {
     }
 }
 
-.engage-session .adapt-height {
-    height: 45.0vh;
-}
-
 .job-description-session .adapt-height {
     height: 35.5vw;
 }
@@ -2764,10 +2802,10 @@ section.host-details {
             font-size: 18px;
         }
         i {
-            font-size: 30px;
+            font-size: 35px;
             background: #fff;
             color: #037ef3;
-            padding: 15px;
+            padding: 22px;
             border-radius: 50%;
         }
         &:nth-child(1) {
