--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -209,7 +209,7 @@
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
                           #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();" dropdownMode="current"
-                          field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
+                          field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Esse é o escritório que vai cuidar de você!'}}"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"  *ngIf="user.local_committee"></i>
                       </div>
                     </div>
@@ -228,7 +228,7 @@
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.scholarity" (ngModelChange)="changeScholarity(user.scholarity.id)" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
                           #scholarityAutocomplete (onFocus)="selectInput('scholarity');scholarityAutocomplete.handleDropdownClick()" dropdownMode="current"
-                          field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?"></p-autoComplete>
+                          field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Qual seu nível de escolaridade?'}}"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('scholarity')"  *ngIf="user.scholarity"></i>
                       </div>
                     </div>
@@ -287,7 +287,7 @@
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.english_level" [suggestions]="filteredEnglishLevelOptions" (completeMethod)="searchEnglishLevels($event)"
                           #englishAutocomplete (onFocus)="selectInput('english_level');englishAutocomplete.handleDropdownClick();" dropdownMode="current"
-                          field="name" formControlName="english_level" emptyMessage="Nenhum resultado" placeholder="Isso nos ajuda a te direcionar para as vagas mais adequadas"></p-autoComplete>
+                          field="name" formControlName="english_level" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Isso nos ajuda a te direcionar para as vagas mais adequadas'}}"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('english_level')"  *ngIf="user.english_level"></i>
                       </div>
                     </div>
@@ -300,7 +300,8 @@
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
-                        <i class="fas fa-book-open"></i>Experiências</div>
+                        <i class="fas fa-book-open"></i> Experiências
+                      </div>
                     </div>
                     <div class="label-experience" *ngIf="!embeddedForm">
                       A escolha das experiências é algo opcional.
@@ -309,7 +310,7 @@
                     <div class="dropdown" *ngIf="embeddedForm">
                       <div class="styled-select select-tag">
                         <select (change)='addOrRemove($event.target.value)'>
-                          <option value="">Experiências</option>
+                          <option value=""></option>
                           <option *ngFor="let experience of experienceItems" value="{{experience.value}}">{{experience.name}}</option>
                         </select>
                       </div>
