--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -381,7 +381,7 @@
             </section>
 
             <div class="form-row buttons" *ngIf="!completedSignup" id="row-with-buttons">
-              <div class="col text-left">
+              <div class="col text-left" *ngIf="!embeddedForm">
                 <button type="button" class="btn btn-secondary" data-toggle="modal" (click)="cancelSignUp(headerGTRef)" data-target="#modalCancelar1">{{formedUser || submittedPersonal ? 'Voltar' : 'Cancelar'}}</button>
               </div>
               <div class="col text-right">
