Chore(Membership Desktop Mobile)align title to center

--- a/src/app/form-membership/form-membership.component.scss
+++ b/src/app/form-membership/form-membership.component.scss
@@ -263,6 +263,7 @@ body {
 
 .styled-select,
 .styled-select select {
+    padding-left: 30px !important;
     width: 100%;
     color: #fff !important;
     option {
