--- a/src/app/landing-page-membership/landing-page-membership.component.html
+++ b/src/app/landing-page-membership/landing-page-membership.component.html
@@ -8,8 +8,8 @@
   <section class="padding-top-and-bottom experiences-session">
     <div class="container">
       <div class="row">
-        <div class="col-12">
-          <h1 class="italic align-left">
+        <div class="col-12 text-padding">
+          <h1 class="italic align-left text-align">
             Ser membro da <strong>AIESEC</strong> é...
           </h1>
         </div>
@@ -53,7 +53,7 @@
   <app-form-membership id="header-talentos-globais"></app-form-membership>
 
   <section class="job-description-session">
-    <div class="col-lg-6 col-sm-4 col-md-4 adapt-height">
+    <div class="col-lg-6 col-sm-4 col-md-4 adapt-height align-height">
       <h1 class="italic align-left white-header bottom-header">
         Aprenda trabalhando <br> nas <strong>mais diversas <br> áreas</strong>
       </h1>
