--- a/src/app/form-membership/form-membership.component.html
+++ b/src/app/form-membership/form-membership.component.html
@@ -252,7 +252,7 @@
                     </div>
                   </div>
                   <div class='col-sm-12'>
-                    <div class="form-group form-check text-center checkbox">
+                    <div class="form-group form-check text-center form-priority checkbox">
                       <input type="checkbox" class="form-check-input" [checked]="user.cellphone_contactable"
                         id="aceitoTermos" [(ngModel)]="user.cellphone_contactable"
                         formControlName="cellphone_contactable" name="cellphone_contactable">
