--- a/src/app/form-membership/form-membership.component.html
+++ b/src/app/form-membership/form-membership.component.html
@@ -268,7 +268,7 @@
               <script type="text/javascript">
                 fbq('track', 'Lead');
               </script>
-              <div class="container">
+              <div class="container" id="scroll-ajust">
                 <div class="row justify-content-center">
                   <div class="col-sm">
                     <div class="row justify-content-center">
@@ -287,8 +287,9 @@
 
             <div class="form-row buttons" *ngIf="!completedSignup" id="row-with-buttons">
               <div class="col">
-                <button type="button" (click)="submit()" class="btn btn-primary"
-                  [disabled]='form.invalid || (!matchDate || invalidEmail || unableToSubmit())'>Enviar</button>
+                <button type="button" (click)="submit()" class="btn btn-primary" [ngx-scroll-to]="'#header-talentos-globais'" 
+                [ngx-scroll-to-offset]="-120"
+                [disabled]='form.invalid || (!matchDate || invalidEmail || unableToSubmit())'>Enviar</button>
               </div>
             </div>
           </div>
