fix(slider-membership, landing-page-membership): added CTA btn in membership header
BR-281 - https://devmagic.atlassian.net/browse/BR-281

--- a/src/app/landing-page-membership/landing-page-membership.component.scss
+++ b/src/app/landing-page-membership/landing-page-membership.component.scss
@@ -291,6 +291,7 @@ section.history-session,
 section.experiences-session {    
     background-position: bottom center;
     background-size: 25%;
+    margin-top: -80px;
     @at-root :host-context(.no-webp) #{&} {
         background-image: url('/assets/images/pattern1.png');
     }
