--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -235,7 +235,7 @@ section, footer, div {
         margin: 75px 0 !important;
     }
     &.padding-top-and-bottom {
-        padding: 75px 0 !important
+        padding: 0 0 75px 0 !important
     }
     &.margin-top-and-bottom-host {
         margin: 35px 0 !important;
