--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -229,54 +229,7 @@
                       Selecione a AIESEC mais próxima.
                     </div>
                   </div>
-                  <div class="form-group scholarity">
-                    <div class="input-group select-dropdown">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text">
-                          <i class="fas fa-graduation-cap"></i>Escolaridade</div>
-                      </div>
-                      <div class="dropdown">
-                        <div class="styled-select">
-                          <p-autoComplete [(ngModel)]="user.scholarity"
-                            (ngModelChange)="changeScholarity(user.scholarity.id)"
-                            [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
-                            #scholarityAutocomplete
-                            (onFocus)="selectInput('scholarity');scholarityAutocomplete.handleDropdownClick();"
-                            dropdownMode="current" field="name" formControlName="scholarity"
-                            emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?">
-                          </p-autoComplete>
-                          <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('scholarity')"
-                            *ngIf="user.scholarity"></i>
-                        </div>
-                      </div>
-                    </div>
-                    <div *ngIf="isValidStudy('scholarity')" class='error-message'>
-                      Selecione um nível de escolaridade
-                    </div>
-                  </div>
-                  <div *ngIf="user.scholarity.id >= 2 && user.scholarity.id != 6" class="animated fadeIn faster">
-                    <div class="form-group  university">
-                      <div class="input-group select-dropdown">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text">
-                            <i class="fas fa-graduation-cap"></i>Universidade</div>
-                        </div>
-                        <div class="dropdown">
-                          <div class="styled-select">
-                            <p-autoComplete [(ngModel)]="user.university" [suggestions]="universities"
-                              (completeMethod)="searchUnivesity($event)" #universityAutocomplete
-                              (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick();"
-                              dropdownMode="current" field="name" formControlName="university_id"
-                              emptyMessage="Nenhum resultado" placeholder="Digite aqui onde você estuda"></p-autoComplete>
-                            <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')"
-                              *ngIf="user.university"></i>
-                          </div>
-                        </div>
-                      </div>
-                      <div *ngIf="isValidStudy('university_id')" class='error-message'>
-                        Selecione uma universidade.
-                      </div>
-                    </div>
+                  <div class="animated fadeIn faster">
                     <div class="form-group college_course">
                       <div class="input-group select-dropdown">
                         <div class="input-group-prepend">
