fix(form-prospect): form details fix

--- a/src/app/form-prospect/form-prospect.component.scss
+++ b/src/app/form-prospect/form-prospect.component.scss
@@ -1387,7 +1387,7 @@ label {
   --------------------------------------------------------------*/
 
 .form-volutario-global .color-icon {
-    color: #fcada0;
+    color: #ffffff;
 }
 
 /* Forms */
