--- a/src/app/form-prospect/form-prospect.component.html
+++ b/src/app/form-prospect/form-prospect.component.html
@@ -159,6 +159,31 @@
                     </div>
                   </div>
 
+                  <div class="form-group">
+                    <div class="input-group">
+                      <div class="input-group-prepend desktop">
+                        <div class="input-group-text">
+                          <i class="fas fa-gift"></i>Data de Nascimento</div>
+                      </div>
+                      
+                      <i class="fas fa-gift mobile mobile-icon"></i>
+                      <input class="form-control p-inputMask gv" id="inputDatadeNascimento" (blur)="checkDate()" placeholder="{{ placeholderBirthdate }}" 
+                      [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" mask="00/00/0000"/>
+                      <div class="valid-feedback">
+                        <i class="fas fa-check"></i>
+                      </div>
+                    </div>
+                    <div *ngIf="isValidPersonal('birthdate')" class='error-message'>
+                      Preencha com a sua data de nascimento.
+                    </div>
+                    <div *ngIf="invalidDate" class='error-message'>
+                      Por favor, preencha com uma data válida
+                    </div>
+                    <div *ngIf="!matchDate" class='error-message'>
+                      Desculpe, nossos programas são direcionados para pessoas entre 18 e 30 anos.
+                    </div>
+                  </div>
+
                   <div class="form-group local_committee">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
