fix(styles): add 'input-webkit-autofill' style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,9 @@ select, option {
         font-size: 4vw !important;
     }
 }
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: #fff;
+}
