fix(form-membership): fixed validation ref

--- a/src/app/form-membership/form-membership.component.html
+++ b/src/app/form-membership/form-membership.component.html
@@ -186,7 +186,7 @@
                       </div>
                     </div>
                   </div>
-                  <div *ngIf="isValid('college_course_id')" class='error-message'>
+                  <div *ngIf="isValid('state')" class='error-message'>
                     Selecione uma das opções
                   </div>
                 </div>
