--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -52,7 +52,7 @@
               <a (click)="goToAiesec()" href="http://blog.aiesec.org.br/a-aiesec/" target="_blank">A AIESEC</a>
             </p>
             <p>
-              <a (click)="goToFcParte()" href="http://blog.aiesec.org.br/faca-parte/" target="_blank">Faça parte</a>
+              <a (click)="goToFcParte()">Faça parte</a>
             </p>
             <p>
               <a (click)="goToAlummi()" href="https://alumnet.aiesec-alumni.org/home" target="_blank">Alummi</a>
