chore: form-prospect layout updated

--- a/src/app/form-prospect/form-prospect.component.scss
+++ b/src/app/form-prospect/form-prospect.component.scss
@@ -1396,6 +1396,7 @@ label {
     background: #037ef3;
     font-family: 'Lato', sans-serif;
     color: #ffffff;
+    height: 100vh;
 }
 
 .form-volutario-global .form-control {
