--- a/src/app/form-prospect/form-prospect.component.html
+++ b/src/app/form-prospect/form-prospect.component.html
@@ -303,7 +303,7 @@
             </section>
 
             <div class="form-row buttons" *ngIf="!completedSignup" id="row-with-buttons">
-              <div class="col text-left">
+              <div class="col text-right">
                 <button type="button" class="btn btn-secondary" [disabled]='unableToSubmit()' (click)="submit('form-voluntario-global', true)">Concluir e adicionar +1</button>
               </div>
             </div>
