fix(form-prospect): method removed

--- a/src/app/form-prospect/form-prospect.component.html
+++ b/src/app/form-prospect/form-prospect.component.html
@@ -33,7 +33,7 @@
 
     <!-- Form -->
     <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading"
-      [ngClass]="{formB : formToggle}" (window:resize)="onResize($event)">
+      [ngClass]="{formB : formToggle}">
       <div class="container">
         <div class="row justify-content-center">
 
